refactor: 多模块 DDD 收敛与 tenant-scope 治理
system/masterdata Handler→ApplicationService 收敛(ADR-0028/0032); metadata-sdk TenantScope 显式化与全入口门禁(ADR-0034); blueprint 订单/支付异步租户上下文收敛; 补充 ADR-0032~0034、tenant 实体声明校验与联调脚本